--- a/pages/login/style.module.scss
+++ b/pages/login/style.module.scss
@@ -60,3 +60,21 @@
   opacity: 0;
   transform: translate3d(0, -60px, 0);
 }
+
+.socialLine {
+  margin-top: 1rem;
+  text-align: center;
+  padding: 0;
+}
+
+textRight {
+  // display: "flex",
+  // alignItems: "center",
+  // backgroundColor: "transparent",
+  // padding: "0.9375rem 1.875rem",
+  // paddingRight: "0",
+  // justifyContent: "flex-end",
+  // "& a": {
+  //   cursor: "pointer"
+  // }
+}
